--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d2cde36
+	base = e09d216
 	trimbase = 
 	parent = release/indigo/camera_umd
-	previous = 
+	previous = d2cde36
