--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b60d3f
+	base = 0910188
 	trimbase = 
 	parent = rpm/indigo/camera_umd
-	previous = 
+	previous = 6b60d3f
