--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e59da32
+	base = 0932602
 	trimbase = 
 	parent = release/indigo/uvc_camera
-	previous = 
+	previous = e59da32
