--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96d7e84
+	base = 2b224db
 	trimbase = 
 	parent = rpm/indigo/uvc_camera
-	previous = 
+	previous = 96d7e84
