--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e19e8ef
+	base = be1b75f
 	trimbase = 
 	parent = rpm/indigo/jpeg_streamer
-	previous = 
+	previous = e19e8ef
