--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 38e25aa
+	base = d6f1560
 	trimbase = 
 	parent = release/indigo/jpeg_streamer
-	previous = 
+	previous = 38e25aa
